--- a/_config.yml
+++ b/_config.yml
@@ -2,22 +2,20 @@
 #
 
 # Site settings
-title: Spectral
+title: Google Developers Group Portugal
 description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
-owner: Your Name # or company name
-first_published: 2016 # if migrating another site, the year of your first publish
+  
+owner: GDGPortugal # or company name
+first_published: 2017 # if migrating another site, the year of your first publish
 email: your-email@domain.com
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://gdgportugal.xyz" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
+  #twitter: https://twitter.com/
+  github: https://github.com/GDGPortugal
+  #linkedin-square: https://linkedin.com/in/
+  facebook-official: https://facebook.com/GDGPortugal
+  #google-plus-square: https://plus.google.com/u/0/+<username>
   #email: /contact/
   #flickr:
   #instagram:
