--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+# Firebase docs
+.firebaserc
+database.rules.json
+firebase.json
+firebase-debug.log
