ga & minor spelling corrections

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #
 
 # Site settings
-title: Google Developers Group Portugal
+title: Google Developer Group Portugal
 description: |
   
 owner: GDGPortugal # or company name
