--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,76 @@
-# Jekyll ignores
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
+
+### Jekyll ###
+_site/
 .sass-cache/
-_site
+.jekyll-cache/
+.jekyll-metadata
 
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+### Ruby ###
+*.gem
+*.rbc
+/.config
+/coverage/
+/InstalledFiles
+/pkg/
+/spec/reports/
+/spec/examples.txt
+/test/tmp/
+/test/version_tmp/
+/tmp/
 
-# Folder config file
-Desktop.ini
+# Used by dotenv library to load environment variables.
+# .env
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# Ignore Byebug command history file.
+.byebug_history
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+## Specific to RubyMotion:
+.dat*
+.repl_history
+build/
+*.bridgesupport
+build-iPhoneOS/
+build-iPhoneSimulator/
 
-# Windows shortcuts
-*.lnk
+## Specific to RubyMotion (use of CocoaPods):
+#
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
+# vendor/Pods/
 
-# =========================
-# Operating System Files
-# =========================
+## Documentation cache and generated files:
+/.yardoc/
+/_yardoc/
+/doc/
+/rdoc/
 
-# OSX
-# =========================
+## Environment normalization:
+/.bundle/
+/vendor/bundle
+/lib/bundler/man/
 
-.DS_Store
-.AppleDouble
-.LSOverride
+# for a library or gem, you might want to ignore these files since the code is
+# intended to run in multiple environments; otherwise, check them in:
+# Gemfile.lock
+# .ruby-version
+# .ruby-gemset
 
-# Thumbnails
-._*
+# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
+.rvmrc
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
+# Used by RuboCop. Remote config files pulled in from inherit_from directive.
+# .rubocop-https?--*
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-
-# Firebase docs
-.firebaserc
-database.rules.json
-firebase.json
-firebase-debug.log
+### Ruby Patch ###
+# Used by RuboCop. Remote config files pulled in from inherit_from directive.
+# .rubocop-https?--*
