--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@
 
 title: Google Developer Group Portugal
 email: ""
-description: "" # >- # this means to ignore newlines until "baseurl:"
+# description: "Directório de todas as GDGs de Portugal." # >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gdgportugal.xyz" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: gdgportugal
 github_username:  gdgportugal
 
@@ -34,11 +34,13 @@ plugins:
 # Organizer Info
 organizerName: "GDG Portugal"
 organizerAlternateName: "Google Developer Group Portugal"
-organizerDescription: "A Google Developers Group, mais conhecida como GDG, é uma iniciativa promovida pela Google que pretende ser um mecanismo para a criação de comunidades locais, cujo principal objectivo é difundir conhecimento tecnológico e não tecnológico pelos seus membros.Promovemos um ambiente inclusivo, uma vez que qualquer pessoa interessada por tecnologia são bem-vindos a participar. Neste momento, existem mais de 10 GDGs diferentes espalhadas por Portugal, todas estas com a mesma nobre missão."
+organizerDescription: "Directório de todas as GDGs de Portugal."
 organizerEmail: "gdgportugal@googlegroups.com"
 organizerLogo: "/images/organizer-logo.png"
 organizerLink: "https://gdgportugal.xyz/"
 facebookAppId: "638759390345238"
+
+socialImageSrcFacebook: "https://i.imgur.com/10b2aW6.png"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
